--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,13 @@
+.counter {
+    background-color: red;
+    text-align: center;
+}
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.counterIcon{
+    background-color: white;
+    color: blue;
+    font-size: 45px;
+    border-radius: 20px;
+    margin: 30px;
+    padding: 30px;
+}
